Fixed references to deprecated methods and updated Java Doc information for website.